[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Misc/TeamSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Game_modes/ZombieMod/Zm_TeamSelect.gd" type="Script" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/ct.jpg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.666667 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.694118, 0.72549, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[node name="TeamSelect" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="container" parent="TeamSelect" index="0"]
margin_top = -148.5
margin_bottom = 148.5

[node name="T" parent="TeamSelect/container" index="0"]
visible = false

[node name="CT" parent="TeamSelect/container" index="1"]
margin_top = 0.0
margin_bottom = 60.0
text = "Exterminator"

[node name="spec" parent="TeamSelect/container" index="2"]
margin_top = 110.0
margin_bottom = 170.0

[node name="quit" parent="TeamSelect/container" index="3"]
margin_top = 220.0
margin_bottom = 280.0

[node name="CT_join" type="Panel" parent="TeamSelect" index="5"]
margin_left = -890.37
margin_top = 47.838
margin_right = -383.37
margin_bottom = 386.838
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TeamSelect/CT_join" index="0"]
margin_left = 159.756
margin_top = 30.659
margin_right = 309.756
margin_bottom = 160.659
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TeamSelect/CT_join/Panel" index="0"]
margin_left = 3.0
margin_top = 3.0
margin_right = 147.0
margin_bottom = 127.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TeamSelect/CT_join" index="1"]
margin_left = 48.0
margin_top = 183.0
margin_right = 449.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
text = "Join Exterminators and eliminate zombies."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CT_join_btn" type="Button" parent="TeamSelect/CT_join" index="2"]
margin_left = 348.0
margin_top = 287.0
margin_right = 455.0
margin_bottom = 325.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TeamSelect/container/CT" to="." method="_on_CT_pressed"]
[connection signal="pressed" from="TeamSelect/CT_join/CT_join_btn" to="." method="_on_CT_join_btn_pressed"]
